Eclipse1/SalesforceCI/ Enterprise/objects/Connect_Meeting__c.object
<CustomObject>
    <description>Connect Your Rep (CYR): Instance of a meeting.</description>
    <fields>
        <fullName>Ad_Hoc__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Does this meeting occur at the point of the meeting request creation?</description>
        <label>Ad Hoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <defaultValue>&quot;Please join me in an on-line meeting.&quot;</defaultValue>
        <description>Enter any details about the meeting here. These details will be included in the email that invitees receive.</description>
        <label>Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Sent_Time__c</fullName>
        <description>The time the meeting request emails were sent. Set automatically by the system.</description>
        <label>Email Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Emails_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked once the system has completed sending emails to invitees.</description>
        <label>Emails Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>The time the meeting ends. (Optional)</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Room_ID__c</fullName>
        <description>The ID of this meeting room in the meeting room provider.</description>
        <label>Meeting Room ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>The date and time this meeting starts.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>